--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ initial-scale=1.0">
 </head>
 
 <body>
- <h1>Hello, Git!</h1>
+ <h1>Hello, Git! I'm learning version control.</h1>
 </body>
 
 </html>
