--- a/journal/guzel.html
+++ b/journal/guzel.html
@@ -23,11 +23,12 @@
             background-color: #fff;
             padding: 10px 0;
             text-align: center;
-            border-bottom: 3px solid #522C2A;
+            border-bottom: 4px solid #522C2A;
+            margin-bottom: 10px;
         }
 
         nav a {
-            margin: 0 20px;
+            margin: 0 40px;
             text-decoration: none;
             color: #000;
             font-family: 'Averia Serif Libre', serif;
@@ -43,7 +44,7 @@
         .container {
             display: flex;
             justify-content: space-between;
-            padding: 20px;
+            padding: 40px;
             align-items: center;
         }
 
@@ -54,15 +55,15 @@
         }
 
         .image-section img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
+            width: auto;
+            height: 609px;
+            border-radius: 14px;
         }
 
         .image-text {
             position: absolute;
-            bottom: 10px;
-            left: 20px;
+            bottom: 50px;
+            left: 10px;
             color: white;
             font-family: 'Grape Nuts', sans-serif;
             font-size: 36px;
@@ -74,17 +75,19 @@
             width: 50%;
             background-color: #522C2A;
             padding: 20px;
-            height: 609px; /* Match image height */
+            height: auto;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: center;
             color: white;
+            height: 609px; /* Match image height */
         }
 
         .text-rect p {
             font-size: 36px;
             font-family: 'Grape Nuts', sans-serif;
             margin: 0;
+            text-align: center;
             line-height: 1.6;
         }
 
@@ -93,7 +96,7 @@
             font-weight: bold;
             font-size: 72px;
             text-align: center;
-            margin-top: 20px;
+            margin-top: 40px;
         }
 
     </style>
