--- a/journal/gallery.html
+++ b/journal/gallery.html
@@ -55,6 +55,7 @@
             border-radius: 10px;
             transition: transform 0.3s ease;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
         }
 
         .gallery img:hover {
@@ -67,6 +68,28 @@
             color: #522C2A;
             margin-top: 20px;
             margin-bottom: 40px;
+        }
+
+        /* Lightbox for full-size image */
+        .lightbox {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            display: none;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .lightbox img {
+            max-width: 90%;
+            max-height: 90%;
+        }
+
+        .lightbox:target {
+            display: flex;
         }
 
     </style>
@@ -87,13 +110,33 @@
 
     <!-- Photo Gallery Section -->
     <section class="gallery">
-        <img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00642.JPG" alt="Photo 1">
-        <img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00016_обработано.JPG" alt="Photo 2">
-        <img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\PXL_20220610_0602.jpg" alt="Photo 3">
-        <img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00322.JPG" alt="Photo 4">
-        <img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\PXL_20220731_143951025.jpg" alt="Photo 5">
-        <img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00392.JPG" alt="Photo 6">
+        <a href="#img1"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00642.JPG" alt="Photo 1"></a>
+        <a href="#img2"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00016_обработано.JPG" alt="Photo 2"></a>
+        <a href="#img3"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\PXL_20220610_0602.jpg" alt="Photo 3"></a>
+        <a href="#img4"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00322.JPG" alt="Photo 4"></a>
+        <a href="#img5"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\PXL_20220731_143951025.jpg" alt="Photo 5"></a>
+        <a href="#img6"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00392.JPG" alt="Photo 6"></a>
     </section>
+
+    <!-- Lightbox for full-sized images -->
+    <div id="img1" class="lightbox">
+        <a href="#_"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00642.JPG" alt="Full Photo 1"></a>
+    </div>
+    <div id="img2" class="lightbox">
+        <a href="#_"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00016_обработано.JPG" alt="Full Photo 2"></a>
+    </div>
+    <div id="img3" class="lightbox">
+        <a href="#_"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\PXL_20220610_0602.jpg" alt="Full Photo 3"></a>
+    </div>
+    <div id="img4" class="lightbox">
+        <a href="#_"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00322.JPG" alt="Full Photo 4"></a>
+    </div>
+    <div id="img5" class="lightbox">
+        <a href="#_"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\PXL_20220731_143951025.jpg" alt="Full Photo 5"></a>
+    </div>
+    <div id="img6" class="lightbox">
+        <a href="#_"><img src="C:\Users\heart\OneDrive\GeekBrains\03_AI автоматизация на своих серверах\5-6 GIT\git\journal\Gallery\DSC00392.JPG" alt="Full Photo 6"></a>
+    </div>
 
 </body>
 
